--- a/src/backend/pom.xml
+++ b/src/backend/pom.xml
@@ -33,6 +33,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.7.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.7.6</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
